# Smartspace-The-AI-Real-Estate-Companion

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  smartspace.db
backend/app/: main.py  seed.py
backend/app/agents/: base.py  conversation.py  document.py  listing.py  market.py  matchmaker.py  spatial.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  chat.py  documents.py  health.py  ingestion.py  listings.py  recommendations.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: admin.py  chat.py  documents.py  listings.py  recommendations.py
backend/app/services/: gemini.py  orchestrator.py
backend/data/: sample_properties.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  app-data.js  styles.css
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: AppLayout.jsx  EmptyState.jsx  MetricCard.jsx  Panel.jsx  ProtectedRoute.jsx  charts.jsx
frontend/src/pages/: AdminDashboardPage.jsx  DiscoveryPage.jsx  DocumentsPage.jsx  ListingPage.jsx  LoginPage.jsx  MarketingHomePage.jsx  UserHomePage.jsx
infra/db/init/: 001_extensions.sql
smartspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit_app/: Home.py
streamlit_app/api_client/: client.py
streamlit_app/pages/: 1_Buyer_Chat.py  2_Seller_Listing.py  3_Document_Review.py  4_Admin_Dashboard.py
tests/: test_health.py
