[project]
name = "smartspace"
version = "0.1.0"
description = "SmartSpace: AI real-estate companion with Streamlit UI and FastAPI backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.3.4",
    "streamlit>=1.45.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pgvector>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "streamlit_app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

